--- a/env.dist
+++ b/env.dist
@@ -1,4 +1,4 @@
 # ':'-delimited list of modules whose deps are comprehensive for runtime
 # see github.com/promet/drop_ship
-PROJECT=sf-roots.dev
+PROJECT=sfroots
 export DROPSHIP_SEEDS=$PROJECT
