--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
     "drupal/diff": "7.*",
     "drupal/entity": "7.*",
     "drupal/features": "7.2.*",
+    "drupal/jquery_update": "7.*",
     "drupal/job_scheduler": "7.*",
     "drupal/module_filter": "7.*",
     "drupal/panels": "7.*",
