Adding gen_person, genealogy, and content type features, changes to compser.json and composer.lock, and dependencies to sfoots.info

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
     "composer/installers": "1.*",
     "davidbarratt/custom-installer": "dev-master",
     "netresearch/composer-patches-plugin": "1.*",
+    "drupal/auto_entitylabel": "7.*",
     "drupal/drupal": "7.*",
     "drupal/admin_menu": "7.*",
     "drupal/ckeditor": "7.*",
@@ -80,6 +81,7 @@
     "drupal/date": "7.*",
     "drupal/diff": "7.*",
     "drupal/entity": "7.*",
+    "drupal/entityinfo": "7.*",
     "drupal/entityreference_hidden": "7.*",
     "drupal/features": "7.2.*",
     "drupal/jquery_update": "7.*",
@@ -90,6 +92,7 @@
     "drupal/registry_rebuild": "7.*",
     "drupal/rules": "7.*",
     "drupal/strongarm": "7.*",
+    "drupal/token": "7.*",
     "drupal/views": "7.*",
     "drupal/bootstrap": "7.*",
     "drush/drush": "6.*",
