Fixing output of name prefixes and suffixes, add genealogy_content_editor_role feature

--- a/composer.json
+++ b/composer.json
@@ -97,10 +97,12 @@
     "drupal/date": "7.*",
     "drupal/diff": "7.*",
     "drupal/email": "7.*",
+    "drupal/enforce_revlog": "7.*",
     "drupal/entity": "7.*",
     "drupal/entityinfo": "7.*",
     "drupal/entityreference_hidden": "7.*",
-    "drupal/features": "7.2.*",
+    "drupal/features": "7.2.3",
+    "drupal/features_roles_permissions": "7.*",
     "drupal/file_entity": "7.*",
     "drupal/jquery_update": "7.*",
     "drupal/job_scheduler": "7.*",
