--- a/composer.json
+++ b/composer.json
@@ -103,11 +103,13 @@
     "drupal/entityreference_hidden": "7.*",
     "drupal/features": "7.2.3",
     "drupal/features_roles_permissions": "7.*",
+    "drupal/fieldable_panels_panes": "7.*",
     "drupal/file_entity": "7.*",
     "drupal/jquery_update": "7.*",
     "drupal/job_scheduler": "7.*",
     "drupal/module_filter": "7.*",
     "drupal/node_save_redirect": "7.*",
+    "drupal/panelizer": "7.*",
     "drupal/panels": "7.*",
     "drupal/panels_bootstrap_layouts": "7.*",
     "drupal/pathauto": "7.*",
