Adding a number of content types

--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
     "composer/installers": "1.*",
     "davidbarratt/custom-installer": "dev-master",
     "netresearch/composer-patches-plugin": "1.*",
+    "drupal/addressfield": "7.*",
     "drupal/auto_entitylabel": "7.*",
     "drupal/drupal": "7.*",
     "drupal/admin_menu": "7.*",
@@ -103,17 +104,17 @@
     "drupal/entityreference_hidden": "7.*",
     "drupal/features": "7.2.3",
     "drupal/features_roles_permissions": "7.*",
-    "drupal/fieldable_panels_panes": "7.*",
     "drupal/file_entity": "7.*",
+    "drupal/inline_entity_form": "7.*",
     "drupal/jquery_update": "7.*",
     "drupal/job_scheduler": "7.*",
     "drupal/module_filter": "7.*",
     "drupal/node_save_redirect": "7.*",
-    "drupal/panelizer": "7.*",
-    "drupal/panels": "7.*",
-    "drupal/panels_bootstrap_layouts": "7.*",
+    "drupal/office_hours": "7.*",
+    "drupal/phone": "7.*",
     "drupal/pathauto": "7.*",
     "drupal/registry_rebuild": "7.*",
+    "drupal/restful": "7.*",
     "drupal/rules": "7.*",
     "drupal/strongarm": "7.*",
     "drupal/token": "7.*",
@@ -130,9 +131,9 @@
     "drupal/devel": "7.*",
     "drupal/devel_themer": "7.1.x-dev",
     "drupal/diff": "~7.3.2",
-    "drupal/drupal-extension": "1.*",
+    "drupal/drupal-extension": "*",
     "drupal/stage_file_proxy": "7.1.6",
-    "phpunit/phpunit": "4.3.5",
+    "phpunit/phpunit": "*",
     "drupal/coder": "7.2.4"
   },
   "extra": {
