--- a/composer.json
+++ b/composer.json
@@ -128,6 +128,7 @@
     "behat/mink": "*",
     "behat/mink-selenium2-driver": "*",
     "drupal/backup_migrate": "7.3.*",
+    "drupal/entityinfo": "7.*",
     "drupal/devel": "7.*",
     "drupal/devel_themer": "7.1.x-dev",
     "drupal/diff": "~7.3.2",
