Fixed patch process for entityreference_autocreate, updated genealogy_bios_documents_notes_and_photos feature, fixed modal launch for add a person

--- a/cnf/config.yml.dist
+++ b/cnf/config.yml.dist
@@ -10,4 +10,4 @@ drupal:
                     driver: mysql
                     host: localhost
     include:
-        require_once: [%DRUPAL_ROOT . '/sites/default/vendor/autoload.php']
+        require_once: [%DRUPAL_ROOT . '/../vendor/autoload.php']
