--- a/composer.json
+++ b/composer.json
@@ -150,6 +150,7 @@
     "drupal/token": "7.*",
     "drupal/views": "7.*",
     "drupal/bootstrap": "7.*",
+    "drupal/bootstrap_fieldgroup": "7.*",
     "drush/drush": "6.*",
     "sf-roots/patches": "~1.0",
     "promet/settings_compile": "~2.1.2"
