--- a/composer.json
+++ b/composer.json
@@ -162,6 +162,8 @@
     "drupal/module_filter": "7.*",
     "drupal/node_save_redirect": "7.*",
     "drupal/office_hours": "7.*",
+    "drupal/panels": "7.*",
+    "drupal/panels_bootstrap_layouts": "7.*",
     "drupal/phone": "7.*",
     "drupal/pathauto": "7.*",
     "drupal/registry_rebuild": "7.*",
